--- a/app-secret.yml
+++ b/app-secret.yml
@@ -1,8 +1,8 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: mysecret
+  name: app-secret
 type: Opaque
 data:
-  db-pass: mysql
-  rmq-pass: rabbit
+  db-pass: dnByb2RicGFzcw==
+  rmq-pass: Z3Vlc3Q=
