--- a/vprodbdeploy.yml
+++ b/vprodbdeploy.yml
@@ -24,7 +24,7 @@ spec:
               mountPath: /var/lib/mysql
           ports:
             - name: vprodb-port
-              container-Port: 3306
+              containerPort: 3306
           env:
             - name: MYSQL_ROOT_PASSWORD
               valueFrom:
